--- a/src/account/templates/signup.html
+++ b/src/account/templates/signup.html
@@ -1,38 +1,36 @@
-{% extends "base.html" %}
-{% load staticfiles %}
-
-{% block head_title %}Signup | {{ block.super }}{% endblock head_title %}
-
+{% extends "base.html" %}{% load staticfiles %}{% block head_title %}Signup | {{ block.super }}{% endblock head_title %}
 {% block css %}
-    <script src='https://www.google.com/recaptcha/api.js'></script>
-{% endblock %}
-
+    <script src='https://www.google.com/recaptcha/api.js'></script>{% endblock %}
 {% block content %}
-    <div class="form">
-        <h2>Signup</h2>
-        <h3>{% if messages %}{% for m in messages %}{{ m }}{% endfor %}</h3>
-            <a href="{% url 'account:login' %}"> Go to Login Page</a><br><br>
-        {% endif %}
-        <form method="post" action="">{% csrf_token %}
-            {{ form.username }}
-            {{ form.username.errors }}
-            {{ form.first_name }}
-            {{ form.last_name }}
-            {{ form.email }}
-            {{ form.email.errors }}
-            {{ form.password }}
-            {{ form.password.errors }}
-            <ul>
-                <li>Your password must contain at least 8 characters.</li>
-                <li>Your password can&#39;t be a commonly used password.</li>
-                <li>Your password can&#39;t be entirely numeric.</li>
-                <li>Your password can&#39;t be too similar to your other personal information.</li>
-            </ul>
-            {{ form.confirm_password }}
-            {{ form.confirm_password.errors }}
-            <div class="g-recaptcha" data-sitekey="6Ld5a2gUAAAAAA7LIc7ugPczbREEnZ3FVB2o2Cvu"></div>
-            <button type="submit">Signup</button>
-            <a href="{% url 'account:login' %}">Login</a>
-        </form>
-    </div>
+    <div id="heading" style="top: 3.0rem;"><h1>5TH INTERNATIONAL CONFERENCE ON CICT 2019</h1></div>
+    <div class="inner"><br><br><br>
+        <div class="form" style="margin: auto;">
+            <section>
+                <div class="content">
+                    <h2>Create a Account</h2>
+                    <h4>{% if messages %}{% for m in messages %}{{ m }}{% endfor %}{% endif %}</h4>
+                    <form method="post" action="" style="text-align: left;">{% csrf_token %}
+                        {{ form.username }}{{ form.username.errors }}<br>
+                        {{ form.first_name }}<br>{{ form.last_name }}<br>{{ form.email }}
+                        {{ form.email.errors }}<br>{{ form.password }}{{ form.password.errors }}<br>
+                        <ul>
+                            <li>Your password must contain at least 8 characters.</li>
+                            <li>Your password can&#39;t be a commonly used password.</li>
+                            <li>Your password can&#39;t be entirely numeric.</li>
+                            <li>Your password can&#39;t be too similar to your other personal information.</li>
+                        </ul>
+                        {{ form.confirm_password }}{{ form.confirm_password.errors }}<br>
+                        <div style="float: right;">
+                            <script src='https://www.google.com/recaptcha/api.js'></script>
+                            <div class="g-recaptcha" data-sitekey="6Ld5a2gUAAAAAA7LIc7ugPczbREEnZ3FVB2o2Cvu"></div>
+                        </div>
+                        <br style="clear: both"><br>
+                        <button type="submit" class="primary button fit">Signup</button>
+                        <br><br>
+                        <a href="{% url 'account:login' %}" class="button fit">Login</a>
+                    </form>
+                </div>
+            </section>
+        </div>
+        <br></div>
 {% endblock %}
