--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -38,7 +38,7 @@
         </div>
     </div>
 </header>
-<div class="frame_topic" style="clear:both;">
+	<div class="frame_topic" style="clear:both;"><h1>hello</h1>
     <!-- - - - - - - - - - START - - - - - - - - - - - - -->
     {% block content %}{% endblock content %}
     <!-- - - - - - - - - - - END - - - - - - - - - - - -->
